# lynxtron-examples

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  showcase-registry.json
.changeset/: config.json  init-release-pipeline.md  pre.json
.github/workflows/: ci.yml  release-installers.yml  release.yml
docs/: lynxtron-framework-issues.md  lynxtron-go-ide-plan.md  lynxtron-go-showcase-web-goal.md  lynxtron-go-showcase-web-plan.md  lynxtron-go-showcase-web-status.md  lynxtron-go-showcase-web-workflow.md  product-plan.md  project-goal.md  showcase-development.md  status-log.md  workflow.md
docs/showcase-designs/: benchmark-dashboard.md  cross-platform-notes.md  native-texture-canvas.md
docs/superpowers/plans/: 2026-03-18-showcase-architecture.md  2026-03-19-showcase-integration.md  2026-07-01-lynxtron-fiddle-port.md
docs/superpowers/specs/: 2026-03-18-showcase-architecture-design.md  2026-03-19-lynxtron-go-showcase-integration-design.md
docs/workflows/: 2026-03-19-feat-showcase-integration.md  2026-03-20-feat-statusbar-run-menu.md  2026-03-23-feat-global-search.md  2026-03-25-feat-benchmark-dashboard.md  2026-03-25-feat-cross-platform-showcase.md  2026-04-02-feat-example-artifact-url-open.md  2026-04-03-feat-bundle-url-debug-runner.md  2026-04-03-feat-navigation-route-foundation.md  2026-04-03-feat-pc-mouse-cursor-showcase.md  2026-04-03-fix-example-artifact-run-regression.md  2026-04-08-fix-example-artifact-external-bundle-default-entry.md  2026-04-08-fix-showcase-ts-diagnostic-false-positives.md  2026-04-09-feat-bundle-file-debug-runner.md  2026-04-10-chore-showcase-local-start-dev-baseline.md  2026-04-10-feat-go-ide-showcase-start-dev.md  2026-04-10-feat-go-scheme-handler.md  2026-04-10-fix-go-pack-node-fetch-builder.md  2026-04-17-chore-go-architecture-stabilization.md  2026-04-17-chore-go-preload-service-modularization.md  2026-04-17-chore-go-workspace-session-model.md  2026-05-08-chore-windows-bringup.md  2026-05-08-feat-current-file-search.md  2026-05-09-complete-cross-platform-notes.md  2026-05-09-feat-go-route-navigation-buttons.md  2026-05-09-feature-windows-scintilla-extension.md  2026-05-18-chore-dead-code-cleanup.md  2026-07-21-clip-scintilla-margin.md  2026-07-21-disable-scintilla-line-scroll-snap.md  2026-07-21-match-scintilla-bounce-background.md  2026-07-21-prevent-scintilla-first-frame-flash.md
lynxtron-go/: .gitignore  AGENTS.md  IDE_PLAN.md  README.md  README.zh-cn.md  WORKFLOW.md  electron-builder.yml  launch_debug.sh  lynx-devtool-mcp.json  lynx.config.ts  package.json  rspack.config.ts  vitest.config.mts  vitest.config.ts
lynxtron-go/docs/: DEBUG_STRATEGY.md  LANGUAGE_SERVICES_ARCHITECTURE.md  LAYOUT_ARCHITECTURE.md
lynxtron-go/http-service-extension/: CMakeLists.txt  README.md  index.cjs  package.json
lynxtron-go/http-service-extension/bindings/: bind_napi.cc
lynxtron-go/http-service-extension/module/: http_service_darwin.mm  http_service_extension_module.cc  http_service_extension_module.h  http_service_win.cc
lynxtron-go/http-service-extension/scripts/: build.js  prepare.js
lynxtron-go/resources/: installer.nsh
lynxtron-go/sample_project/: index.js  package.json
lynxtron-go/scintilla-extension/: CMakeLists.txt  index.cjs  package.json
lynxtron-go/scintilla-extension/bindings/: bind_napi.cc
lynxtron-go/scintilla-extension/module/: scintilla_extension_module.cc  scintilla_extension_module.h  scintilla_view.h  scintilla_view.mm  scintilla_view_win.cc
lynxtron-go/scintilla-extension/scintilla/: CMakeLists.txt
lynxtron-go/scintilla-extension/scintilla/cocoa/: ScintillaView.mm
lynxtron-go/scintilla-extension/scripts/: build.js  prepare.js
lynxtron-go/scripts/: ensure-builder-patches.js  prepare-runtime-deps.js  pty_wrapper  start_debug.js
lynxtron-go/src/app/: App.css  App.tsx  diagnostics.test.ts  diagnostics.ts  example-artifact.test.ts  index.tsx  store.ts  syntax.test.ts  syntax.ts  tsconfig.json  types.d.ts
lynxtron-go/src/app/commands/: registry.ts  showcase-commands.test.ts  showcase-commands.ts
lynxtron-go/src/app/fiddle/: Fiddle.css  Fiddle.tsx  README.md  dev-preset.ts  theme.ts  types.ts
lynxtron-go/src/app/ide/: default-file.test.ts  default-file.ts
lynxtron-go/src/app/shared/: current-file-search.test.ts  current-file-search.ts  deep-link-bridge.test.ts  deep-link-bridge.ts  deep-link-dispatch.test.ts  deep-link-dispatch.ts  deep-link-runtime.test.ts  deep-link-runtime.ts  example-artifact.ts  native-bridge-encoding.test.ts  native-bridge-encoding.ts  navigation.test.ts  navigation.ts  workspace-session.test.ts  workspace-session.ts
lynxtron-go/src/extension-host/: index.ts  types.ts
lynxtron-go/src/main/desktop/: example-artifact.ts  (+18 more)
lynxtron-go/src/shared/: deep-link.test.ts  deep-link.ts
scripts/: generate-registry.ts  local-registry.sh  pack-showcases.mjs  preview.mjs  preview.sh
showcases/benchmark/: CHANGELOG.md  lynx.config.ts  package.json  rspack.config.ts
showcases/counter/: package.json  rspack.config.ts
showcases/cross-platform-notes/: README.md  lynx.config.ts  package.json  rspack.config.ts
showcases/cross-platform-notes/scripts/: serve-web.mjs
showcases/file-explorer/: CHANGELOG.md  package.json  tsconfig.tools.json
showcases/floating-clock/: CHANGELOG.md  lynx.config.ts  package.json  rspack.config.ts
showcases/native-texture-canvas/: lynx.config.ts  package.json  rspack.config.ts
showcases/native-texture-canvas/native-texture-extension/: CMakeLists.txt  index.cjs  package.json
showcases/native-texture-canvas/native-texture-extension/bindings/: bind_napi.cc
showcases/native-texture-canvas/native-texture-extension/module/: native_texture_canvas_module.cc  native_texture_canvas_module.h  native_texture_canvas_surface_mac.mm  native_texture_canvas_surface_win.cc  native_texture_canvas_view.cc  native_texture_canvas_view.h
showcases/native-texture-canvas/native-texture-extension/scripts/: build.js
showcases/pc-mouse-cursor/: lynx.config.ts  package.json  rspack.config.ts
showcases/system-monitor/: CHANGELOG.md  package.json
(+161 files in other folders)
